deps/v8/test/message/fail/destructuring-array-non-iterable-number.out
*%(basename)s:5: TypeError: 1 is not iterable
var [a] = 1;
          ^
TypeError: 1 is not iterable
    at *%(basename)s:5:11
